[fix] ktlintの定義場所を変更